Update the fromat for the JsonCheck output.

--- a/json-tokenizer.vcxproj.filters
+++ b/json-tokenizer.vcxproj.filters
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="json-tokenizer.h">
-      <Filter>Resource Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
